<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

        app:toolbarId="@+id/details_toolbar">

      <ImageView
          android:id="@+id/details_iv"
          android:layout_width="match_parent"
          android:layout_height="match_parent"

          android:layout_marginTop="?attr/actionBarSize"
          android:onClick="imageViewOnClick"
          android:scaleType="centerCrop"
          android:src="@android:drawable/sym_def_app_icon"
          tools:ignore="SpeakableTextPresentCheck"
          tools:srcCompat="@drawable/ic_race_car_svgrepo_com" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?attr/actionBarSize"
      android:clipToPadding="true"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/LinearLayout_margin"
        android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_details_model"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ed_details_model_hint" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_details_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ed_details_color_hint" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_details_dpl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ed_details_dpl_hint" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorTextColor="@color/accent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_details_des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ed_details_des_hint" />
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>